--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,10 +36,10 @@ add_executable(CoinGame src/main.cpp src/Character.cpp src/Coin.cpp src/BadCoin.
 #it uses the FindSFML.cmake file to do so and sets
 #some variables ($SFML_LIBRARIES and SFML_INCLUDE_DIRECTORIES) that are
 #used below
-find_package(SFML 2.5 COMPONENTS graphics REQUIRED)
+find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
 
 #tells Cmake that the asteroids executable needs to be linked with SFML
-target_link_libraries(CoinGame sfml-graphics)
+target_link_libraries(CoinGame sfml-graphics sfml-audio)
 
 #passes an option to clang when compiling to use recent c++ stuff
 target_compile_options(CoinGame PUBLIC -std=c++17)
